# vgi-libpostal

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  libpostal_worker.py  pyproject.toml  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  run-integration.sh
test/sql/: expand.test  parse.test  tables.test
tests/: test_addresses.py  test_scalars.py  test_tables.py
vgi_libpostal/: __init__.py  addresses.py  meta.py  scalars.py  schema_utils.py  tables.py  worker.py
