[project]
name = "vgi-libpostal"
version = "0.1.0"
description = "International address parsing + normalization (libpostal) for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "libpostal",
    "address",
    "address-parsing",
    "geocoding",
    "normalization",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.16.0",
    "postal>=1.1",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pydoclint>=0.5",
]
# HTTP transport: the worker can serve over HTTP (`libpostal_worker.py --http`)
# in addition to stdio/AF_UNIX. That path needs vgi-python's `http` extra
# (waitress). The gated SQL-E2E http transport leg installs this via
# `uv sync --extra http` (alongside the libpostal native build).
http = [
    "vgi-python[http]>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_libpostal"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
# The PEP 723 inline-script header wraps dependency pins that should stay one-per-line.
"libpostal_worker.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Native libpostal binding: a C extension with no stubs; also not installable in
# the pure-Python lint job (no libpostal C lib), so it must be ignored there.
module = ["postal.*"]
ignore_missing_imports = true
